--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ethers = "2.0"
 reqwest = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-tokio = { version = "1", features = ["full"] }
+dotenv = "0.15.0"
+tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
+log = "0.4.21"
+env_logger = "0.11.3"
 
